[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["yichi <hustyichi@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.190"
beautifulsoup4 = "^4.12.2"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
duckduckgo-search = "^3.8.1"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
